add hw37